#ESW-182: Poorva: Append gc metric options to coursier command if flag is enabled.
This enable-gc-metrics flag is enabled in case of performance test to collect gc metrics for sequence components.